# TabAutoSyn

./: .env.example  LICENSE  README.md  experiments.ipynb  pyproject.toml  requirements.txt
curation/: curation_gen.ipynb
curation/examples/data/: real_iris.csv  syn_iris.csv
datasets_test/: data_info.csv
examples/: run_generate.py
optuna_params(2 metrics)/ctgan/: adult_ctgan_study.pkl  us_location_ctgan_study.pkl  wine_ctgan_study.pkl
optuna_params(2 metrics)/ddpm/: wine_ddpm_study.pkl
optuna_params(2 metrics)/dpgan/: adult_dpgan_study.pkl  breast_cancer_dpgan_study.pkl  wine_dpgan_study.pkl
optuna_params(2_metrics)/inv_kl+mlp/adult/: ctgan_adult_study.pkl  ddpm_adult_study.pkl
optuna_params(2_metrics)/inv_kl+mlp/breast_cancer/: ctgan_breast_cancer_study.pkl  dpgan_breast_cancer_study.pkl
optuna_params(2_metrics)/inv_kl+mlp/us_location/: ddpm_us_location_study.pkl  dpgan_us_location_study.pkl
optuna_params(2_metrics)/inv_kl+xgb/adult/: ddpm_adult_study.pkl
optuna_params(2_metrics)/inv_kl+xgb/breast_cancer/: ctgan_breast_cancer_study.pkl  dpgan_breast_cancer_study.pkl
optuna_params(2_metrics)/inv_kl+xgb/us_location/: ddpm_us_location_study.pkl
optuna_params(2_metrics)/inv_kl+xgb/wine/: ddpm_wine_study.pkl
optuna_params(2_metrics)/ks_test+mlp/adult/: ctgan_adult_study.pkl  dpgan_adult_study.pkl
optuna_params(2_metrics)/ks_test+mlp/breast_cancer/: ddpm_breast_cancer_study.pkl  dpgan_breast_cancer_study.pkl
optuna_params(2_metrics)/ks_test+mlp/wine/: ctgan_wine_study.pkl  ddpm_wine_study.pkl  dpgan_wine_study.pkl
optuna_params(2_metrics)/ks_test+xgb/breast_cancer/: ctgan_breast_cancer_study.pkl
optuna_params(2_metrics)/ks_test+xgb/ddpm/: adult_ddpm_study.pkl  (+1 more)
optuna_params/ctgan/: breast_cancer_ctgan_study.pkl
optuna_params/dpgan/: breast_cancer_dpgan_study.pkl
tabautosyn/: __init__.py  config.py  custom_metric.py  llm_generator.py  optimization.py  outliers.py
tabautosyn/agents/: deps_reconstruction.py  prompts.py
tabautosyn/automl/: base.py
tabautosyn/strategy/: AS_MIA_with_layers.py  add_metrics.py  scoring.py  selection.py  synthetic_combination_analysis.py
tabautosyn/tail_extension/: Matrix.py  select_outliers.py  tail.py
tabautosyn/utils/: dataset_processor.py  df_desc.py  langfuse.py
(+20 files in other folders)
