[project]
name = "tabautosyn"
version = "0.1.0"
description = "A tabular data synthesis framework for automated machine learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "optuna>=3.0.0",
    "joblib>=1.1.0",
    "synthcity>=0.3.0",
    "deap>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tabautosyn"]
